changes on report, added rnn and lstm definitions based on slides, and explained our RNN model, missing conclusions.

--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -821,7 +821,7 @@
    "source": [
     "The dataframes generated can be opened as follows, to avoid re-running the script above.\n",
     "\n",
-    "The pickle files generated are 2GB total. ############################### importante ver se usamos o git LFTS, se dizemos para dar run, etc\n"
+    "The pickle files generated are approximately 2GB total. They won't be stored on the github repository, but can be obtained on running the code.\n"
    ]
   },
   {
@@ -1255,27 +1255,110 @@
     "## 5. Recurrent Neural Network {#rnn}\n",
     "[Back to Index](#index)\n",
     "\n",
+    "Recurrent Neural Networks (RNNs) are a **class of artificial neural networks designed for processing sequential data** by maintaining a hidden state that captures information about past inputs. This makes them suitable for tasks like time series prediction, language modeling, and speech recognition.\n",
+    "\n",
+    "There are important aspects regarding the RNN flow:\n",
+    "\n",
+    "1. **Recursive Definition**  \n",
+    "   RNNs use a recursive expression to update the hidden state:  \n",
+    "   $$\n",
+    "   \\mathbf{s}(t) = f(\\mathbf{s}(t-1); \\theta)\n",
+    "   $$  \n",
+    "   where $\\mathbf{s}(t)$ is the state at time $t$, $\\mathbf{s}(t-1)$ is the previous state, $f$ is the update function, and $\\theta$ represents the shared parameters.\n",
+    "\n",
+    "2. **Unfolding Process**  \n",
+    "   By repeatedly applying the recursive formula, the recurrence is eliminated, producing a fully unfolded representation:  \n",
+    "   $$\n",
+    "   \\mathbf{s}(3) = f(f(\\mathbf{s}(1); \\theta); \\theta)\n",
+    "   $$  \n",
+    "   Unfolding creates a computational graph without cycles, which facilitates gradient computation during backpropagation through time (BPTT).\n",
+    "\n",
+    "   RNNs use hidden units that update their values based on previous states and input data. These units allow the network to maintain a dynamic memory of past inputs and adapt its behavior over time.\n",
+    "\n",
+    "3. **RNN Loss: Negative Log-Likelihood**\n",
+    "    \n",
+    "    The loss for an RNN is often expressed as the negative log-likelihood of the output sequence given the observation sequence:  \n",
+    "    $$\n",
+    "    \\mathcal{L}(x_1, x_2, \\dots, x_\\tau, y_1, y_2, \\dots, y_\\tau) = \\sum_{t=1}^{\\tau} \\mathcal{L}(t)\n",
+    "    $$  \n",
+    "    where the loss at each time step $t$ is:  \n",
+    "    $$\n",
+    "    \\mathcal{L}(t) = - \\log p_{\\text{model}}(y_t | x_1, x_2, \\dots, x_t)\n",
+    "    $$  \n",
+    "    Where $p_{\\text{model}}(y_t | x_1, x_2, \\dots, x_t)$ is given by reading the entry $y_t$ in the output $\\hat{\\mathbf{y}}$.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c159099-20e0-4158-8b96-9b1ca34dc46c",
+   "metadata": {},
+   "source": [
+    "### Long Short Term Memory network\n",
     "In order to develop an effective **Recurrent Neural Network**, we decided to explore the concept of **Long Short Term Memory** (LSTM) networks. LSTMs are a type of RNN that are designed to handle sequential data pattern recognition. \n",
     "\n",
     "We consider this approach could be the most effective in order to classify the sounds, since continuous sounds or repetitive rythms are sequential. These time-dependant aspects are characteristics which LSTMs are capable of recognizing and \"remembering\" throughout the entire training process.\n",
     "\n",
-    "LSTMs are capable of assigning weights to \"remembered\" features, allowing them to **balance the importance** of **older** and **more recent** information, ensuring they do not give more importance to either one."
+    "LSTMs are capable of assigning weights to \"remembered\" features, allowing them to **balance the importance** of **older** and **more recent** information, ensuring they do not give more importance to either one.\n",
+    "\n",
+    "Some key aspects regarding the LSTM architecture are:\n",
+    "\n",
+    "1. **Memory Cell with Gates:**  \n",
+    "   LSTMs use a memory cell to store information and gating mechanisms to control the flow of information:\n",
+    "   - **Forget Gate:** Determines what information to retain or discard from the memory.  \n",
+    "   - **Input Gate:** Controls the effect of the inout.\n",
+    "   - **Output Gate:** Shuts off the output.  \n",
+    "\n",
+    "<div style=\"text-align: center;\">\n",
+    "    <img src=\"./images/lstm_architecture.png\" alt=\"Image\" width=\"500\">\n",
+    "</div>\n",
+    "\n",
+    "2. **Linear Memory Updates:**  \n",
+    "   LSTMs have a **linear self-loop** mechanism, controlled by the forget gate, which allows them to preserve information over long time steps without significant decay.\n",
+    "\n",
+    "3. **Selective Updates and Outputs:**  \n",
+    "   By selectively updating the memory and regulating the output, LSTMs ensure relevant information is retained and irrelevant details are discarded, unlike standard RNNs, which process all data uniformly.\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 71,
-   "id": "b18205e2-7ae1-4d43-bda6-29472b8e5d87",
+   "cell_type": "markdown",
+   "id": "db4cccae-4290-45fb-8be3-3b041ed47dfa",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "############### agora e preciso ver como proceder, pararei"
+    "### Our model\n",
+    "\n",
+    "The RNN development took place on the `RNN.ipynb` (and on `RNN_extra`) but we will summarise the process in this topic.\n",
+    "\n",
+    "- First of all, we applied the data preprocessing described in this notebook, on chapter 3.\n",
+    "  \n",
+    "- To choose the architecture, we considered the procedures on the two following papers:\n",
+    "    - [Bharati Vidyapeeth’s College of Engineering Paper](https://dergi.neu.edu.tr/index.php/aiit/article/download/740/327/3147)\n",
+    "    - [St.Petersburg Polytechnic University](https://annals-csis.org/Volume_18/drp/pdf/185.pdf)\n",
+    "  The summary of the paper's parameter choices are on the already mentioned file.\n",
+    "\n",
+    "- Then, we created the train tests split, following the fold division recommended by the [website](https://urbansounddataset.weebly.com/urbansound8k.html), and created histograms to evaluate the class distribution for each of the folds.\n",
+    "\n",
+    "- We generated the models using **tensorflow** and **keras** module, following the architecture on both papers, varying some parameters along the way.\n",
+    "\n",
+    "- To evaluate the performance, we verified some metrics for the average of folds, and created confusion matrices that combine all folds, to get a general sense of the model's combined performance.\n",
+    "\n",
+    "### Results\n",
+    "\n",
+    "PLACEHOLDER"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a71cbf7-9ed5-4d99-8a4f-36d7eaee21c1",
+   "metadata": {},
+   "source": [
+    "## 6. Convolutional Neural Network"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1301b69-9de5-463f-a69d-98f821737b96",
+   "id": "d5f14417-9967-4912-850a-d8d900545d73",
    "metadata": {},
    "outputs": [],
    "source": []
