--- a/rnn.ipynb
+++ b/rnn.ipynb
@@ -2408,7 +2408,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "urban-class",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2422,7 +2422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
