add CNN description in final report

--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -1348,20 +1348,100 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "1a71cbf7-9ed5-4d99-8a4f-36d7eaee21c1",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    "## 6. Convolutional Neural Network"
-   ]
+    "## 6. Convolutional Neural Network {#cnn}\n",
+    "[Back to Index](#index)\n",
+    "\n",
+    "Convolutional Neural Networks (CNNs) are a **specialized class of artificial neural networks designed for processing structured grid-like data**, such as images or spectrograms. They excel in tasks like image recognition, object detection, and audio signal classification due to their hierarchical feature extraction.\n",
+    "\n",
+    "### Key Aspects of CNN Architecture:\n",
+    "\n",
+    "1. **Convolutional Operation**\n",
+    "   The core building block of CNNs is the convolution operation, which applies learnable filters to local regions of the input data. For an input $\\mathbf{x}$ and filter $\\mathbf{w}$, the convolution is defined as:\n",
+    "   $$\n",
+    "   (\\mathbf{x} * \\mathbf{w})(i, j) = \\sum_{m} \\sum_{n} \\mathbf{x}(i+m, j+n) \\cdot \\mathbf{w}(m, n)\n",
+    "   $$\n",
+    "   This operation extracts spatial patterns, such as edges or textures, while preserving spatial relationships.\n",
+    "\n",
+    "2. **Feature Hierarchy**\n",
+    "   CNNs build feature hierarchies by stacking multiple convolutional layers:\n",
+    "   - **Lower Layers:** Detect simple patterns like edges or corners.\n",
+    "   - **Deeper Layers:** Capture complex features like shapes or objects.\n",
+    "\n",
+    "3. **Pooling Layers**\n",
+    "   Pooling layers reduce the spatial dimensions of feature maps, making computations more efficient and robust to small spatial variations. For example, max-pooling computes the maximum value in a local region:\n",
+    "   $$\n",
+    "   \\mathbf{p}(i, j) = \\max_{(m,n) \\in \\mathcal{R}(i,j)} \\mathbf{x}(m, n)\n",
+    "   $$\n",
+    "   where $\\mathcal{R}(i, j)$ defines the pooling region for position $(i, j)$.\n",
+    "\n",
+    "4. **Fully Connected Layers**\n",
+    "   After convolutional and pooling layers, fully connected layers interpret the extracted features for classification. The output is typically passed through a softmax function to compute class probabilities:\n",
+    "   $$\n",
+    "   p_{\\text{model}}(y | \\mathbf{x}) = \\frac{\\exp(\\mathbf{z}_y)}{\\sum_{c=1}^{C} \\exp(\\mathbf{z}_c)}\n",
+    "   $$\n",
+    "   where $\\mathbf{z}$ is the output of the fully connected layer, $C$ is the number of classes, and $y$ is the target class.\n",
+    "\n",
+    "5. **CNN Loss: Cross-Entropy**\n",
+    "   The CNN loss for classification tasks is often the categorical cross-entropy between the predicted class probabilities $\\hat{\\mathbf{y}}$ and the true labels $\\mathbf{y}$:\n",
+    "   $$\n",
+    "   \\mathcal{L}(\\mathbf{y}, \\hat{\\mathbf{y}}) = - \\sum_{c=1}^{C} y_c \\log(\\hat{y}_c)\n",
+    "   $$\n",
+    "   where $y_c$ is the true probability of class $c$, and $\\hat{y}_c$ is the predicted probability.\n"
+   ],
+   "id": "af292af54755cbc2"
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d5f14417-9967-4912-850a-d8d900545d73",
    "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### **Our CNN Model**\n",
+    "\n",
+    "The CNN processes both **2D** and **1D audio features**, ensuring compatibility with specialized convolutional layers:\n",
+    "- **2D Features**:\n",
+    "  Representations like Mel spectrograms, MFCCs, chroma, and spectral contrast are formatted as \\( (height, width, 1) \\) for **Conv2D layers**, combining temporal and frequency information.\n",
+    "  - `mel_shape`: \\( (128, 320, 1) \\)\n",
+    "  - `mfcc_shape`: \\( (40, 320, 1) \\)\n",
+    "  - `chroma_shape`: \\( (12, 320, 1) \\)\n",
+    "  - `contrast_shape`: \\( (7, 320, 1) \\)\n",
+    "\n",
+    "- **1D Features**:\n",
+    "  Temporal features such as spectral rolloff and zero-crossing rate are structured as \\( (time_steps, 1) \\) for **Conv1D layers**, focusing on temporal patterns.\n",
+    "  - `rolloff_shape`: \\( (320, 1) \\)\n",
+    "  - `zcr_shape`: \\( (320, 1) \\)\n",
+    "\n",
+    "\n",
+    "The architecture employs **parallel processing streams**, each tailored to a specific feature type. These streams are merged into a combined representation, enabling robust decision-making. Key inspirations include:\n",
+    "\n",
+    "1. **Multi-Representation CNNs for Audio Classification**\n",
+    "   This approach processes diverse feature representations independently, combining their outputs for improved accuracy. Similarly, our model uses separate CNN streams for features like Mel spectrograms, MFCCs, and rolloff.\n",
+    "   ([Source](https://link.springer.com/article/10.1007/s11042-021-11610-8))\n",
+    "\n",
+    "2. **Ensemble CNNs for Audio Classification**\n",
+    "   While this study emphasizes ensembles, our model integrates specialized CNN branches into a unified architecture, inspired by their feature-specific processing concept.\n",
+    "   ([Source](https://www.mdpi.com/2076-3417/11/13/5796))\n",
+    "\n",
+    "3. **Braided CNNs**\n",
+    "   Inspired by the parallel processing of temporal and frequency features, our model uses **Conv2D** for spectral features and **Conv1D** for temporal ones, ensuring efficient feature extraction.\n",
+    "   ([Source](https://ietresearch.onlinelibrary.wiley.com/doi/pdfdirect/10.1049/iet-spr.2019.0381))\n",
+    "\n",
+    "\n",
+    "\n",
+    "### **Results**\n",
+    "\n",
+    "PLACEHOLDER"
+   ],
+   "id": "e3cec56e3915329e"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "outputs": [],
-   "source": []
+   "execution_count": null,
+   "source": "",
+   "id": "2e29703bdff6fb0e"
   }
  ],
  "metadata": {
