added RNN results, conclusion to the report, missing - results for the cnn (images as well) - references - review

--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -16,8 +16,9 @@
     "4. [Hyperparameters and Regularization Techniques](#hyper)\n",
     "5. [Recurrent Neural Network](#rnn)\n",
     "6. [Convolutional Neural Network](#c)\n",
-    "7. [Conclusion](#conclusion)\n",
-    "8. [References](#ref)"
+    "7. [DeepFool](#deadfool)\n",
+    "8. [Conclusion](#conclusion)\n",
+    "9. [References](#ref)"
    ]
   },
   {
@@ -1334,6 +1335,7 @@
     "- To choose the architecture, we considered the procedures on the two following papers:\n",
     "    - [Bharati Vidyapeeth’s College of Engineering Paper](https://dergi.neu.edu.tr/index.php/aiit/article/download/740/327/3147)\n",
     "    - [St.Petersburg Polytechnic University](https://annals-csis.org/Volume_18/drp/pdf/185.pdf)\n",
+    "      \n",
     "  The summary of the paper's parameter choices are on the already mentioned file.\n",
     "\n",
     "- Then, we created the train tests split, following the fold division recommended by the [website](https://urbansounddataset.weebly.com/urbansound8k.html), and created histograms to evaluate the class distribution for each of the folds.\n",
@@ -1344,12 +1346,52 @@
     "\n",
     "### Results\n",
     "\n",
-    "PLACEHOLDER"
+    "The confusion matrix for all folds combined, as well as the distribution of the accuracies are displayed in the graphs below.\n",
+    "\n",
+    "<div style=\"text-align: center;\">\n",
+    "    <img src=\"./model_images/confusion3.png\" alt=\"Image\" width=\"800\">\n",
+    "</div>\n",
+    "\n",
+    "<div style=\"text-align: center;\">\n",
+    "    <img src=\"./model_images/weighted3.png\" alt=\"Image\" width=\"800\">\n",
+    "</div>\n",
+    "\n",
+    "We can also compare the training accuracy and the validation, throughout the epochs, for each fold.\n",
+    "\n",
+    "<div style=\"text-align: center;\">\n",
+    "    <img src=\"./model_images/train_vs_val3.png\" alt=\"Image\" width=\"800\">\n",
+    "</div>\n",
+    "\n",
+    "\n",
+    "#### **Loss and F1 Score:**\n",
+    "- **Average Loss**: 1.5959 ± 0.1156  \n",
+    "- **Average F1 Score (Weighted)**: 48.35% ± 3.01%\n",
+    "\n",
+    "#### **Accuracies:**\n",
+    "- **Average Training Accuracy**: 70.04% ± 2.52%  \n",
+    "- **Average Validation Accuracy**: 51.90% ± 3.22%  \n",
+    "- **Average Test Accuracy**: 49.01% ± 3.63%  \n",
+    "- **Average Weighted Accuracy**: 50.70% ± 4.58%\n",
+    "\n",
+    "#### Key Considerations\n",
+    "\n",
+    "Training every possible combination of folds, wasn’t feasible due to the time it would take. Instead, we randomly selected 10 combinations for each validation fold to test. Throughout the testing process, it became clear that some folds perform really well on validation, while others do poorly. \n",
+    "\n",
+    "If we had the time to run all combinations, we’d likely end up with more consistent and improved final results, as we could verify during some development testing stages (70% training vs 66% validation | weighted accuracies).\n",
+    "\n",
+    "### Conclusion for the LSTM\n",
+    "\n",
+    "The LSTM model for the UrbanSound8k dataset did okay but has plenty of room to get better. It worked well for some sounds, like class 6, but struggled with classes 1 and 8, which is clear from the confusion matrix. \n",
+    "\n",
+    "Simplifying the model (using fewer layers, adding more dropout, using smaller batches) helped avoid overfitting but made it harder for the model to fully learn complex patterns. The big gap between training accuracy and validation accuracy portrays this issue.\n",
+    "\n",
+    "These changes create a generally better and more balanced model. The average validation performance is not spectacular, but we simply could not improve in order to consistently output good results."
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "af292af54755cbc2",
+   "metadata": {},
    "source": [
     "## 6. Convolutional Neural Network {#cnn}\n",
     "[Back to Index](#index)\n",
@@ -1390,25 +1432,25 @@
     "   \\mathcal{L}(\\mathbf{y}, \\hat{\\mathbf{y}}) = - \\sum_{c=1}^{C} y_c \\log(\\hat{y}_c)\n",
     "   $$\n",
     "   where $y_c$ is the true probability of class $c$, and $\\hat{y}_c$ is the predicted probability.\n"
-   ],
-   "id": "af292af54755cbc2"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "e3cec56e3915329e",
+   "metadata": {},
    "source": [
     "### **Our CNN Model**\n",
     "\n",
     "The CNN processes both **2D** and **1D audio features**, ensuring compatibility with specialized convolutional layers:\n",
     "- **2D Features**:\n",
-    "  Representations like Mel spectrograms, MFCCs, chroma, and spectral contrast are formatted as \\( (height, width, 1) \\) for **Conv2D layers**, combining temporal and frequency information.\n",
+    "  Representations like Mel spectrograms, MFCCs, chroma, and spectral contrast are formatted as $(height, width, 1)$ for **Conv2D layers**, combining temporal and frequency information.\n",
     "  - `mel_shape`: \\( (128, 320, 1) \\)\n",
     "  - `mfcc_shape`: \\( (40, 320, 1) \\)\n",
     "  - `chroma_shape`: \\( (12, 320, 1) \\)\n",
     "  - `contrast_shape`: \\( (7, 320, 1) \\)\n",
     "\n",
     "- **1D Features**:\n",
-    "  Temporal features such as spectral rolloff and zero-crossing rate are structured as \\( (time_steps, 1) \\) for **Conv1D layers**, focusing on temporal patterns.\n",
+    "  Temporal features such as spectral rolloff and zero-crossing rate are structured as $(time\\_steps,1) $ for **Conv1D layers**, focusing on temporal patterns.\n",
     "  - `rolloff_shape`: \\( (320, 1) \\)\n",
     "  - `zcr_shape`: \\( (320, 1) \\)\n",
     "\n",
@@ -1432,16 +1474,57 @@
     "### **Results**\n",
     "\n",
     "PLACEHOLDER"
-   ],
-   "id": "e3cec56e3915329e"
+   ]
   },
   {
+   "cell_type": "markdown",
+   "id": "385954f6-6db1-4d5a-9d71-e0a3c72ad1a0",
    "metadata": {},
+   "source": [
+    "## 7. Deepfool {#deepfool}\n",
+    "[Back to Index](#index)\n",
+    "\n",
+    "PLACEHOLDER"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44f6773e-836f-49ab-bb5d-a51b589a67cc",
+   "metadata": {},
+   "source": [
+    "## 8. Conclusion {#conclusion}\n",
+    "[Back to Index](#index)\n",
+    "\n",
+    "This project provided **valuable insights into the application of deep learning models**, specifically RNNs and CNNs, for urban sound classification. Through this work, we deepened our understanding of audio data preprocessing, spectrogram analysis, and \n",
+    "**how the process of neural network tuning is intricate and complex**. These experiences showcased the challenges inherent in designing robust models for real-world scenarios and soundscapes.  \n",
+    "\n",
+    "The **complexity of multiclass audio classification became evident**, particularly **due to amount of urban sounds** and overlapping between classes. It is worth mentioning as well that through DeepFool, we get a further understanding on the decision boundaries of our models, helping us identify vulnerabilities.\n",
+    "\n",
+    "This study highlights the importance of combining powerful machine learning techniques with thoughtful analysis to improve classification accuracy and develop robust solutions for complex urban sound environments."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2206f704-4567-499e-bfb6-620a1be91e91",
+   "metadata": {},
+   "source": [
+    "## 9. References {#ref}\n",
+    "[Back to Index](#index)\n",
+    "\n",
+    "-\n",
+    "- \n",
+    "- \n",
+    "\n",
+    "..."
+   ]
+  },
+  {
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "2e29703bdff6fb0e"
+   "id": "1c309d0f-c7dd-4df0-b153-0f1ff587c105",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
