DeepFool organization of the notebook for the CNN, added outlier prevention for the robustness

--- a/DeepFool.ipynb
+++ b/DeepFool.ipynb
@@ -166,13 +166,15 @@
    "cell_type": "markdown",
    "source": [
     "**Description:**\n",
+    "\n",
     "This code implements the **DeepFool algorithm** for computing minimal adversarial perturbations on a multi-input deep learning model. It includes the following functions:\n",
     "\n",
-    "1. **`get_gradient`**:\n",
-    "   Computes the gradient of the \\(k\\)-th output of the model with respect to its input. This is essential for determining the direction and magnitude of perturbations required to fool the model.\n",
+    "1. **`get_gradient`**:  \n",
+    "   Computes the gradient of the \\(k\\)-th output of the model with respect to its multi-input data. The function is specifically designed to handle models with multiple input features by treating inputs as dictionaries of tensors. This is essential for determining the direction and magnitude of perturbations required to fool the model.\n",
     "\n",
-    "2. **`deepfool`**:\n",
-    "   Implements the DeepFool algorithm to iteratively find the smallest perturbation \\(r\\) that changes the model's predicted label.\n",
+    "2. **`deepfool`**:  \n",
+    "   Implements the DeepFool algorithm to iteratively find the smallest perturbation \\(r\\) that changes the model's predicted label.  \n",
+    "   - **Supports multi-input models** by processing inputs as dictionaries, where each key corresponds to a specific feature type (e.g., `input_1`, `input_2`).\n",
     "   - **Inputs**:\n",
     "     - `model`: The multi-input neural network.\n",
     "     - `x0`: The original input as a dictionary of tensors.\n",
@@ -184,18 +186,17 @@
     "     - `loop_i`: Number of iterations performed.\n",
     "     - `label_xi`: The new predicted label after perturbation.\n",
     "\n",
-    "3. **`example_robustness`**:\n",
+    "3. **`example_robustness`**:  \n",
     "   Calculates the robustness value, defined as the ratio of the norm of the perturbation to the norm of the input:\n",
     "   $$\n",
     "   \\rho = \\frac{\\|r(x)\\|_2}{\\|x\\|_2}.\n",
     "   $$\n",
-    "   This metric quantifies the relative size of the perturbation needed to fool the model.\n",
+    "   This function is compatible with multi-input models, summing norms across all input components.\n",
     "\n",
-    "4. **`model_robustness`**:\n",
-    "   Computes the mean and standard deviation of robustness values across multiple examples, providing an overall measure of the model's adversarial robustness.\n",
+    "4. **`model_robustness`**:  \n",
+    "   Computes the mean and standard deviation of robustness values across multiple examples, providing an overall measure of the model's adversarial robustness.  \n",
     "\n",
-    "**Purpose:**\n",
-    "These functions are used to evaluate the robustness of a classifier against adversarial attacks by identifying and quantifying the minimal perturbations required to change its predictions. This is particularly useful in analyzing and comparing the robustness of different deep learning architectures."
+    "These functions are designed to evaluate the robustness of multi-input classifiers against adversarial attacks by identifying and quantifying the minimal perturbations required to change predictions. The multi-input support makes this implementation versatile for models that process diverse types of inputs, such as images, text, or combined features. This framework is particularly useful for analyzing and comparing the robustness of different architectures, such as CNNs, RNNs, or hybrid models."
    ],
    "id": "dd7bce0893e6ba42"
   },
@@ -208,20 +209,8 @@
    },
    "cell_type": "code",
    "source": [
-    "def get_gradient(model, x, k):\n",
-    "    \"\"\"\n",
-    "    Computes the gradient of the k-th element in the model output with respect to the input x.\n",
-    "\n",
-    "    Args:\n",
-    "        model: The multi-input model.\n",
-    "        x: A dictionary of input tensors matching the model's input layers.\n",
-    "        k: The index of the output neuron to compute the gradient for.\n",
-    "\n",
-    "    Returns:\n",
-    "        A tuple containing:\n",
-    "            - A dictionary of gradients with respect to each input tensor.\n",
-    "            - The model's output for input x.\n",
-    "    \"\"\"\n",
+    "def get_gradient(model, x, k)\n",
+    "    #Computes the gradient of the k-th element in the model output with respect to the input x.\n",
     "    with tf.GradientTape() as tape:\n",
     "        inputs = {key: tf.cast(value, dtype=tf.float32) for key, value in x.items()}\n",
     "        for value in inputs.values():\n",
@@ -236,22 +225,7 @@
     "\n",
     "\n",
     "def deepfool(model, x0, eta=0.01, max_iter=20, num_classes=10):\n",
-    "    \"\"\"\n",
-    "    Implements the DeepFool algorithm for a multi-input model.\n",
-    "\n",
-    "    Args:\n",
-    "        model: The multi-input model.\n",
-    "        x0: A dictionary of the initial input tensors without any perturbation.\n",
-    "        eta: Overshoot parameter to control the perturbation step size.\n",
-    "        max_iter: Maximum number of iterations allowed.\n",
-    "        num_classes: Number of classes in the model's output.\n",
-    "\n",
-    "    Returns:\n",
-    "        A tuple containing:\n",
-    "            - A dictionary of the total perturbation r(x).\n",
-    "            - The number of iterations performed.\n",
-    "            - The new label obtained after adding the perturbation to the input.\n",
-    "    \"\"\"\n",
+    "    #Implements the DeepFool algorithm for a multi-input model.\n",
     "    # Obtain the initial estimated label\n",
     "    f_x0 = model(x0).numpy().flatten()\n",
     "    label_x0 = np.argmax(f_x0)\n",
@@ -298,17 +272,7 @@
     "\n",
     "\n",
     "def example_robustness(x, r, epsilon=1e-8):\n",
-    "    \"\"\"\n",
-    "    Calculates the robustness value ||r(x)|| / ||x|| for multi-input data.\n",
-    "\n",
-    "    Args:\n",
-    "        x: A dictionary of input tensors.\n",
-    "        r: A dictionary of perturbations corresponding to each input tensor.\n",
-    "        epsilon: A small value to prevent division by zero.\n",
-    "\n",
-    "    Returns:\n",
-    "        The robustness value as a float.\n",
-    "    \"\"\"\n",
+    "    #Calculates the robustness value ||r(x)|| / ||x|| for multi-input data.\n",
     "    r_norm = np.sqrt(sum(np.linalg.norm(r_input.flatten())**2 for r_input in r.values()))\n",
     "    x_norm = np.sqrt(sum(np.linalg.norm(x_input.flatten())**2 for x_input in x.values()))\n",
     "    return r_norm / (x_norm + epsilon)\n",
@@ -316,15 +280,7 @@
     "\n",
     "\n",
     "def model_robustness(example_robustness_list):\n",
-    "    \"\"\"\n",
-    "    Calculates the mean and standard deviation of robustness values for the model.\n",
-    "\n",
-    "    Args:\n",
-    "        example_robustness_list: A list of robustness values for each example.\n",
-    "\n",
-    "    Returns:\n",
-    "        A tuple containing the mean and standard deviation of the robustness values.\n",
-    "    \"\"\"\n",
+    "    #Calculates the mean and standard deviation of robustness values for the model.\n",
     "    mean = np.mean(np.array(example_robustness_list))\n",
     "    std = np.std(np.array(example_robustness_list))\n",
     "    return mean, std"
@@ -448,27 +404,6 @@
     "    # Use the remaining folds as the training set\n",
     "    train_idx = ~(test_idx | val_idx)\n",
     "\n",
-    "    # Function to pad or truncate 2D features\n",
-    "    def pad_or_truncate_2d(X):\n",
-    "        num_samples, height, width = X.shape\n",
-    "        if width > TARGET_WIDTH:\n",
-    "            X = X[:, :, :TARGET_WIDTH]  # Truncate\n",
-    "        elif width < TARGET_WIDTH:\n",
-    "            pad_width = TARGET_WIDTH - width\n",
-    "            X = np.pad(X, ((0, 0), (0, 0), (0, pad_width)), mode='constant')  # Pad\n",
-    "        return X\n",
-    "\n",
-    "\n",
-    "    # Function to pad or truncate 1D features\n",
-    "    def pad_or_truncate_1d(X):\n",
-    "        num_samples, width = X.shape\n",
-    "        if width > TARGET_WIDTH:\n",
-    "            X = X[:, :TARGET_WIDTH]  # Truncate\n",
-    "        elif width < TARGET_WIDTH:\n",
-    "            pad_width = TARGET_WIDTH - width\n",
-    "            X = np.pad(X, ((0, 0), (0, pad_width)), mode='constant')  # Pad\n",
-    "        return X\n",
-    "\n",
     "\n",
     "    # Adjust features for train, validation, and test sets\n",
     "    X_train_mel = pad_or_truncate_2d(X_mel[train_idx])\n",
@@ -517,7 +452,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Here we calculate the robustness of the CNN model for each fold that exists in the dataset",
+   "source": "Here we calculate the robustness of the CNN model for each fold that exists in the dataset, we use the same method we did for the CNN training within the 10 folds, and take the same precautions of input sizes and regulating 2D and 1D features.",
    "id": "1c3dc26a879dd5b8"
   },
   {
@@ -705,6 +640,12 @@
    "execution_count": 9
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "The robustness values across folds show high standard deviations compared to their means, indicating the presence of outliers. This suggests that while the model demonstrates moderate robustness on average, certain data points deviate significantly, highlighting cases where the model is either highly robust or extremely vulnerable to adversarial perturbations. These outliers contribute to the variability observed in the robustness measurements, we will now adress these outliers.",
+   "id": "5b1d39c2a7f069e9"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-12-01T22:43:39.552166Z",
@@ -713,6 +654,10 @@
    },
    "cell_type": "code",
    "source": [
+    "import numpy as np\n",
+    "from collections import Counter\n",
+    "\n",
+    "# Calculate mean and standard deviation of robustness values\n",
     "mean_robustness = np.mean(robustness_values_cnn_fold)\n",
     "std_robustness = np.std(robustness_values_cnn_fold)\n",
     "\n",
@@ -722,19 +667,30 @@
     "\n",
     "# Identify outliers\n",
     "outliers = [(i, value) for i, value in enumerate(robustness_values_cnn_fold) if value > threshold_high or value < threshold_low]\n",
+    "outlier_indices = [i for i, _ in outliers]\n",
     "\n",
     "print(f\"Number of outliers: {len(outliers)}\")\n",
     "print(\"Outlier indices and values:\", outliers)\n",
+    "\n",
     "# Map robustness values to their respective classes\n",
-    "outlier_classes = [y_test[idx] for idx, _ in outliers]  # Use y_test instead of test_labels\n",
+    "outlier_classes = [y_test[idx] for idx in outlier_indices]  # Use y_test instead of test_labels\n",
     "\n",
     "# Count occurrences of each class in outliers\n",
-    "from collections import Counter\n",
     "outlier_class_counts = Counter(outlier_classes)\n",
     "\n",
     "print(\"Outlier Class Distribution:\")\n",
     "for class_id, count in outlier_class_counts.items():\n",
-    "    print(f\"Class {class_id}: {count} occurrences\")\n"
+    "    print(f\"Class {class_id}: {count} occurrences\")\n",
+    "\n",
+    "# Exclude outliers from robustness values\n",
+    "filtered_robustness_values = [value for i, value in enumerate(robustness_values_cnn_fold) if i not in outlier_indices]\n",
+    "\n",
+    "# Recalculate mean and standard deviation without outliers\n",
+    "filtered_mean_robustness = np.mean(filtered_robustness_values)\n",
+    "filtered_std_robustness = np.std(filtered_robustness_values)\n",
+    "\n",
+    "print(f\"Filtered Mean Robustness: {filtered_mean_robustness}\")\n",
+    "print(f\"Filtered Standard Deviation Robustness: {filtered_std_robustness}\")\n"
    ],
    "id": "c11a393edd1a8d0b",
    "outputs": [
@@ -759,6 +715,12 @@
     }
    ],
    "execution_count": 10
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "88afb1139ae59073"
   },
   {
    "metadata": {},
@@ -920,6 +882,45 @@
     "    print(f\"Class {class_id}: {count} occurrences\")\n"
    ],
    "id": "28b95b7243701e94"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Conclusion",
+   "id": "1b029da164ec2481"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "3adf3459677c4e3a"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# References",
+   "id": "dab5230da37f78b"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "\n",
+    "\n",
+    "   - [Moosavi-Dezfooli, S.-M., Fawzi, A., Frossard, P., Polytechnique, E. and De Lausanne, F. (2016). DeepFool: a simple and accurate method to fool deep neural networks.](https://openaccess.thecvf.com/content_cvpr_2016/papers/Moosavi-Dezfooli_DeepFool_A_Simple_CVPR_2016_paper.pdf)\n",
+    "\n",
+    "   - [Morgan, A. (2022). A Review of DeepFool: a simple and accurate method to fool deep neural networks. [online] Machine Intelligence and Deep Learning](https://medium.com/machine-intelligence-and-deep-learning-lab/a-review-of-deepfool-a-simple-and-accurate-method-to-fool-deep-neural-networks-b016fba9e48e#:~:text=DeepFool%20finds%20the%20minimal%20perturbations)\n",
+    "\n"
+   ],
+   "id": "8376e3a16523019d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "c4bc10ad2246e896"
   }
  ],
  "metadata": {
