DeepFool organization of the notebook for the CNN, added outlier prevention for the robustness

--- a/DeepFool.ipynb
+++ b/DeepFool.ipynb
@@ -209,7 +209,7 @@
    },
    "cell_type": "code",
    "source": [
-    "def get_gradient(model, x, k)\n",
+    "def get_gradient(model, x, k):\n",
     "    #Computes the gradient of the k-th element in the model output with respect to the input x.\n",
     "    with tf.GradientTape() as tape:\n",
     "        inputs = {key: tf.cast(value, dtype=tf.float32) for key, value in x.items()}\n",
